Fixed gutter size on mobile

--- a/themes/cypress/source/css/_partial/header.scss
+++ b/themes/cypress/source/css/_partial/header.scss
@@ -23,6 +23,8 @@
 
   img {
     width: 100%;
+    position: relative;
+    top: 4px;
   }
 }
 #main-nav {
