--- a/themes/cypress/source/css/_variables.scss
+++ b/themes/cypress/source/css/_variables.scss
@@ -40,7 +40,7 @@ $font-size: 16px;
 $line-height: 1.7em;
 
 // Layout
-$max-width: 1300px;
+$max-width: 1400px;
 $gutter-width: 30px;
 $sidebar-width: 260px;
 $mobile-nav-width: 260px;
